<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/ClearSquare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clearsquare"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CircleSquare"
        app:layout_constraintVertical_bias="0.041" />

    <Button
        android:id="@+id/CircleSquare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/circles"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RectangleSquare"
        app:layout_constraintVertical_bias="0.034" />

    <Button
        android:id="@+id/RectangleSquare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rectangles"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GetBack"
        app:layout_constraintVertical_bias="0.034" />

    <TextView
        android:id="@+id/textViewCurrentFigure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_figure_square"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSummarySquare"
        app:layout_constraintVertical_bias="0.036" />

    <Button
        android:id="@+id/GetBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backtocoordinates"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCurrentFigure"
        app:layout_constraintVertical_bias="0.044" />

    <TextView
        android:id="@+id/textViewSummarySquare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/summary_square"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055" />


</androidx.constraintlayout.widget.ConstraintLayout>