<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/getCountTwoPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getLocationCleared"
        app:layout_constraintVertical_bias="0.034" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/DB2"
        android:layout_width="114dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getCountTwoPoints"
        app:layout_constraintVertical_bias="0.541"
        tools:listitem="@layout/rv_design" />

    <Button
        android:id="@+id/getLocationCleared"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clearall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getLocationSaved"
        app:layout_constraintVertical_bias="0.034" />

    <TextView
        android:id="@+id/textViewNetwork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/network_coordinates"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGps"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/getLocationSaved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/savecoord"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNetwork"
        app:layout_constraintVertical_bias="0.104" />

    <TextView
        android:id="@+id/textViewGps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gps_coordinates"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.144" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/DB1"
        android:layout_width="114dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getCountTwoPoints"
        app:layout_constraintVertical_bias="0.541"
        tools:listitem="@layout/rv_design" />

    <Button
        android:id="@+id/Localization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ru"
        app:layout_constraintBottom_toTopOf="@+id/textViewGps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301" />


</androidx.constraintlayout.widget.ConstraintLayout>